# rttr-auto-register

./: .gitignore  CMakeLists.txt  NOTICE  README.md  sign.sh
src/: CLI11.hpp  main.cpp  register.cpp  register.h
src/clangraii/: clangDiagnostic.h  clangIndex.h  clangString.h  translationUnit.h
src/python/: autoregister.py
src/test/: auto_gen.cpp  example.h  example1.h
src/test/third/: rttrGeneratorMacro.h
test/: defines.h  example.h  example1.h
